--- a/src/components/turn/homework/homework.css
+++ b/src/components/turn/homework/homework.css
@@ -3,7 +3,7 @@
     align-items: center;
     width: 100%;
     min-height: 65px;
-    background-color: red;
+    background-color: blue;
     border-radius: 7px;
     border: 2px solid white;
     cursor: pointer;
