--- a/src/components/turn/turn.css
+++ b/src/components/turn/turn.css
@@ -13,7 +13,8 @@
     margin-top: 25px;
     display: flex;
     flex-direction: column;
-    height: 300px;
+    height: 70vw;
+    overflow-y: auto;
 }
 
 
