--- a/src/components/turn/turn.css
+++ b/src/components/turn/turn.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     border-radius: 20px;
-    justify-content: start;
+    justify-content: center;
     box-shadow: 2px 10px 15px 1px black;
 }
 
@@ -22,7 +22,7 @@
 }
 
 .turn-list-content{
-    width: 85%;
+    width: 80%;
     margin-top: 25px;
     display: flex;
     flex-direction: column;
