--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,17 +1,32 @@
 
 .container-home {
+    align-items: center;
+    background: #eee8e8;
+    border-bottom-left-radius: 20%;
+    border-bottom-right-radius: 20%;
     display: flex;
     flex-direction: column;
+    height: auto;
     justify-content: center;
-    align-items: center;
     box-shadow: 2px 10px 15px 1px gray;
-    padding: 10px;
-    height: 20%;
+    padding: 2%;
 }
+
+.container-options{
+    display: flex;
+    flex-direction: row;
+    gap: 8%;
+}
+
+.container-render{
+    margin-top: 10%;
+}
+
 .turn-botton{
-    box-shadow: 2px 2px 5px 1px black;
-    background: blue;
-    border: none;
+    background: #ea525f !important;
+    border-radius: 80%;
     color: white;
-    margin-top: 15px;
 }
+
+
+
