--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -9,13 +9,12 @@
     height: auto;
     justify-content: center;
     box-shadow: 2px 10px 15px 1px gray;
-    padding: 2%;
+    padding: 4%;
 }
 
 .container-options{
     display: flex;
     flex-direction: row;
-    gap: 8%;
 }
 
 .container-render{
@@ -26,6 +25,7 @@
     background: #ea525f !important;
     border-radius: 80%;
     color: white;
+    margin: 2%;
 }
 
 
