--- a/src/components/turn/homework/homework.css
+++ b/src/components/turn/homework/homework.css
@@ -1,25 +1,26 @@
 .turn-container {
-    display: flex;
     align-items: center;
-    width: 100%;
-    min-height: 65px;
-    background-color: blue;
+    background-color: #ea525f;
     border-radius: 7px;
     border: 2px solid white;
     cursor: pointer;
+    display: flex;
+    margin-left: 7%;
+}
+
+.text-style{
+    color: white;
+    font-weight: bolder;
+    font-size: 20px;
 }
 
 .turn-text {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    font-size: 20px;
     align-items: flex-start;
+    display: flex;
+    width: 80%;
+    height: auto;
     justify-content: center;
-    padding: 10px;
-    color: white;
-    font-weight: bolder;
+   
 }
 
 .text-date {
