--- a/src/components/turn/homework/homework.css
+++ b/src/components/turn/homework/homework.css
@@ -5,7 +5,7 @@
     border: 2px solid white;
     cursor: pointer;
     display: flex;
-    margin-left: 7%;
+    margin-right: 8%;
 }
 
 .text-style{
