--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+:root {
+  --red-color: #ea525f; 
+  --white-color: #eee8e8;
+  --blue-color: #2c95cf;
+  --white-color: white;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
