--- a/src/components/customer/customer.css
+++ b/src/components/customer/customer.css
@@ -1,3 +1,54 @@
 .card {
     width: 100%;
   }
+
+.customer-list-content{
+    background: var(--white-color);;
+    border-radius: 20px;
+    border: solid 2px var(--blue-color);;
+    display: flex;
+    height: 50vh;
+    flex-direction: column;
+    margin-top: 10%;
+    margin-left: 3%;
+    margin-right: 3%;
+    overflow-y: scroll;
+}
+
+.customer-container {
+  align-items: center;
+  background-color: var(--blue-color);
+  border-radius: 7px;
+  border: 2px solid white;
+  cursor: pointer;
+  color: var(--white-color);
+  display: flex;
+  justify-content: space-between;
+  margin: 1%;
+  padding: 5%;
+}
+
+.customer-text {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  justify-content: center;
+}
+
+.icon-container{
+  display: flex;
+}
+
+
+.text-style-name{
+  color: white;
+  font-weight: bolder;
+  font-size: 20px;
+}
+
+.text-style-mail{
+  color: white;
+  font-weight: bolder;
+  font-size: 10px;
+}
