--- a/src/components/turn/homework/homework.css
+++ b/src/components/turn/homework/homework.css
@@ -1,6 +1,6 @@
 .turn-container {
     align-items: center;
-    background-color: #ea525f;
+    background-color: var(--red-color);
     border-radius: 7px;
     border: 2px solid white;
     cursor: pointer;
@@ -20,7 +20,6 @@
     width: 80%;
     height: auto;
     justify-content: center;
-   
 }
 
 .text-date {
@@ -46,8 +45,9 @@
 
 
 .icons {
-    display: flex;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
     border-radius: 70px;
+    display: flex;
+    background-color: white;
     margin: 8px;
 }
