animation turn list

--- a/src/components/turn/turn.css
+++ b/src/components/turn/turn.css
@@ -1,44 +1,119 @@
-@import '../../index.css';
+@import "../../index.css";
 
-.container-turn{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    border-radius: 20px;
-    justify-content: center;
-    box-shadow: 2px 10px 15px 1px black;
-    padding-bottom: 20%;
+.container-turn {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  border-radius: 20px;
+  justify-content: center;
+  box-shadow: 2px 10px 15px 1px rgb(167, 165, 165);
 }
 
-.style-form{
-    width: 100%;
+.style-form {
+  width: 100%;
 }
 
-.conatiner-search{
-    margin-left: 5%;
-    margin-right: 5%;
+.conatiner-search {
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
-.hold-over-botton{
-    background: var(--red-color);
-    border: none;
-    color: var(--white-color);;
-    margin-top: 4%;
-    width: 70%;
-    margin-left: 5%;
+.hold-over-botton {
+  background: var(--red-color);
+  border: none;
+  color: var(--white-color);
+  margin-top: 4%;
+  width: 70%;
+  margin-left: 5%;
 }
 
-.turn-list-content{
-    background: var(--white-color);;
-    border-radius: 20px;
-    border: solid 2px var(--blue-color);
-    display: flex;
-    height: 35vh;
-    flex-direction: column;
-    margin: 3%;
-    overflow-y: scroll;
-    padding-right: 15%;
+.turn-component {
+  display: flex;
 }
 
+.turn-list-content {
+  background: var(--white-color);
+  border-radius: 20px;
+  border: solid 2px var(--blue-color);
+  display: flex;
+  height: 35vh;
+  flex-direction: column;
+  margin: 3%;
+  overflow-y: scroll;
+  padding-right: 15%;
+  position: relative;
+}
 
+.turn-title {
+  position: sticky;
+  top: 0;
+  background-color: var(--blue-color);
+  color: var(--white-color);
+  border-radius: 20px;
+  width: 95%;
+  padding: 7px;
+  margin: 0;
+}
 
+.arrow-container {
+  position: absolute;
+  top: 20px;
+  right: 40px;
+  margin-top: 20%;
+}
+
+.arrow-up {
+  border-style: solid;
+  border-width: 0 10px 20px 10px;
+  border-color: transparent transparent var(--blue-color);
+  margin-bottom: 5px;
+  
+}
+
+.arrow-down {
+  border-style: solid;
+  border-width: 20px 10px 0 10px;
+  border-color: var(--blue-color) transparent transparent transparent;
+  
+}
+
+/* Animación */
+@keyframes up {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-100px);
+  }
+  60% {
+    transform: translateY(-50px);
+  }
+}
+
+@keyframes down {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(100px);
+  }
+  60% {
+    transform: translateY(50px);
+  }
+}
+
+.arrow-up {
+  animation: up 4s infinite;
+}
+
+.arrow-down {
+  animation: down 4s infinite;
+}
