--- a/src/components/turn/formTurn/formTurn.css
+++ b/src/components/turn/formTurn/formTurn.css
@@ -1,16 +1,19 @@
 .turn-form{
     align-items: center;
+    border-radius: 20px;
+    box-shadow: 2px 10px 15px 1px rgb(167, 165, 165);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 10%;
+    width: 80%;
+    margin-left: 10%;
+    padding: 2%
 }
 
 .turn-input{
     width: 350px;
     font-size: 18px;
     background-color: var(--white-color);
-    padding: 14px 32px 14px 16px;
     border-radius: 10px;
     border: 2px solid var(--blue-color);
     margin-top: 9px;
