--- a/src/components/turn/turn.css
+++ b/src/components/turn/turn.css
@@ -23,6 +23,7 @@
   border: none;
   color: var(--white-color);
   margin-top: 4%;
+  margin-bottom: 8%;
   width: 70%;
   margin-left: 5%;
 }
@@ -38,7 +39,7 @@
   display: flex;
   height: 35vh;
   flex-direction: column;
-  margin: 3%;
+  margin: 5%;
   overflow-y: scroll;
   padding-right: 15%;
   position: relative;
