--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -15,6 +15,7 @@
 .container-options{
     display: flex;
     flex-direction: row;
+    gap: 20px;
 }
 
 .container-render{
@@ -25,6 +26,10 @@
     background: var(--blue-color);
     border-radius: 80%;
     margin: 2%;
+}
+
+.turn-botton-selected{
+    background: var(--red-color) !important;
 }
 
 
