--- a/src/components/turn/formTurn/formTurn.css
+++ b/src/components/turn/formTurn/formTurn.css
@@ -1,7 +1,7 @@
 .turn-form{
     align-items: center;
     border-radius: 20px;
-    box-shadow: 2px 10px 15px 1px rgb(167, 165, 165);
+    box-shadow: 2px 2px 5px 1px gray;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -20,7 +20,7 @@
 }
 
 .turn-botton{
-    box-shadow: 2px 2px 5px 1px black;
+    box-shadow: 2px 2px 5px 1px gray;
     background: var(--blue-color);
     border: none;
     color: var(--white-color);;
