--- a/src/components/turn/homework/homework.css
+++ b/src/components/turn/homework/homework.css
@@ -46,7 +46,7 @@
 
 
 .icons {
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 2px 2px 5px 1px gray;
     border-radius: 70px;
     display: flex;
     background-color: white;
