--- a/src/components/customer/customer.css
+++ b/src/components/customer/customer.css
@@ -15,6 +15,7 @@
     margin-right: 3%;
     overflow-y: scroll;
     padding: 0 3% 3% 3%;
+    box-shadow: 2px 2px 5px 1px gray;
 }
 
 .customer-container {
@@ -30,6 +31,7 @@
   margin-left: 5%;
   margin-right: 5%;
   padding: 3%;
+  box-shadow: 2px 2px 5px 1px gray;
 }
 
 .customer-text {
