--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
   --white-color: #eee8e8;
   --blue-color: #2c95cf;
   --white-color: white;
+  --orange-color: #f77c3e;
+  --green-color:  #0e9c00;
+
 }
 
 body {
