--- a/src/components/modal/popupAddTurn.css
+++ b/src/components/modal/popupAddTurn.css
@@ -3,8 +3,9 @@
     top: 300px;
     display: flex;
     flex-direction: column;
-    width: 90%;
+    width: 80% !important;
     margin: 0 auto;
+    border: solid 2px var(--blue-color) !important;
 }
 
 .turn-form{
@@ -36,4 +37,21 @@
     margin-top: 15px;
     font-size: 15px;
     padding: 5px;
+}
+
+.cancel-turn{
+    box-shadow: 2px 2px 5px 1px gray;
+    background: var(--red-color);
+    border: none;
+    color: var(--white-color);
+    margin-top: 15px;
+    margin-left: 8px;
+    font-size: 15px;
+    padding: 5px;
+}
+
+.form-select{
+    width: 80% !important;
+    margin: 0 auto;
+    margin-bottom: 2px;
 }
