--- a/src/components/modal/popupAddTurn.css
+++ b/src/components/modal/popupAddTurn.css
@@ -1,57 +1,56 @@
 .modal-content {
-    position: relative;
-    top: 300px;
-    display: flex;
-    flex-direction: column;
-    width: 80% !important;
-    margin: 0 auto;
-    border: solid 2px var(--blue-color) !important;
+  position: relative;
+  top: 300px;
+  display: flex;
+  flex-direction: column;
+  width: 80% !important;
+  margin: 0 auto;
+  border: solid 2px var(--blue-color) !important;
 }
 
-.turn-form{
-    align-items: center;
-    border-radius: 20px;
-    box-shadow: 2px 2px 5px 1px gray;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 80%;
-    margin-left: 10%;
-    padding: 2%
+.turn-form {
+  align-items: center;
+  border-radius: 20px;
+  box-shadow: 2px 2px 5px 1px gray;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 80%;
+  padding: 2%;
 }
 
-.turn-input{
-    width: 350px;
-    font-size: 18px;
-    background-color: var(--white-color);
-    border-radius: 10px;
-    border: 2px solid var(--blue-color);
-    margin-top: 9px;
+.turn-input {
+  width: 80%;
+  font-size: 18px;
+  background-color: var(--white-color);
+  border-radius: 10px;
+  border: 2px solid var(--blue-color);
+  margin-top: 9px;
 }
 
-.create-turn{
-    box-shadow: 2px 2px 5px 1px gray;
-    background: var(--blue-color);
-    border: none;
-    color: var(--white-color);
-    margin-top: 15px;
-    font-size: 15px;
-    padding: 5px;
+.create-turn {
+  box-shadow: 2px 2px 5px 1px gray;
+  background: var(--blue-color);
+  border: none;
+  color: var(--white-color);
+  margin-top: 15px;
+  font-size: 15px;
+  padding: 5px;
 }
 
-.cancel-turn{
-    box-shadow: 2px 2px 5px 1px gray;
-    background: var(--red-color);
-    border: none;
-    color: var(--white-color);
-    margin-top: 15px;
-    margin-left: 8px;
-    font-size: 15px;
-    padding: 5px;
+.cancel-turn {
+  box-shadow: 2px 2px 5px 1px gray;
+  background: var(--red-color);
+  border: none;
+  color: var(--white-color);
+  margin-top: 15px;
+  margin-left: 8px;
+  font-size: 15px;
+  padding: 5px;
 }
 
-.form-select{
-    width: 80% !important;
-    margin: 0 auto;
-    margin-bottom: 2px;
+.form-select {
+  width: 80% !important;
+  margin: 0 auto;
+  margin-bottom: 2px;
 }
