--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,9 @@
   --red-color: #ea525f; 
   --white-color: #eee8e8;
   --blue-color: #2c95cf;
-  --white-color: white;
   --orange-color: #f77c3e;
   --green-color:  #0e9c00;
+  --gray-color:  #878c8d;
 
 }
 
