--- a/src/components/turn/homework/homework.css
+++ b/src/components/turn/homework/homework.css
@@ -7,7 +7,7 @@
     display: flex;
     margin-right: 8%;
     margin-left: 10px;
-    box-shadow: 2px 2px 5px 1px gray;
+    box-shadow: 2px 2px 5px 1px var(--gray-color);;
 }
 
 .text-style{
