--- a/src/components/turn/turn.css
+++ b/src/components/turn/turn.css
@@ -19,6 +19,8 @@
 }
 
 .conatiner-search {
+  display: flex;
+  flex-direction: column;
   margin-left: 5%;
   margin-right: 5%;
   height: 120px;
@@ -40,6 +42,7 @@
   border: none;
   color: var(--white-color);
   box-shadow: 2px 2px 5px 1px gray;
+  margin-top: 10px;
   padding: 2px;
 }
 
