--- a/src/components/modal/addTurn/popupAddTurn.css
+++ b/src/components/modal/addTurn/popupAddTurn.css
@@ -8,7 +8,7 @@
   border: solid 2px var(--blue-color) !important;
 }
 
-.turn-form {
+.turn-form-popup {
   align-items: center;
   border-radius: 20px;
   box-shadow: 2px 2px 5px 1px gray;
