--- a/src/components/turn/formTurn/formTurn.css
+++ b/src/components/turn/formTurn/formTurn.css
@@ -3,8 +3,10 @@
     border-radius: 20px;
     box-shadow: 2px 2px 5px 1px gray;
     display: flex;
-    width: 100%;
+    flex-direction: column;
+    width: 90%;
     margin: 0 auto;
+    padding: 3%;
 }
 
 .turn-input{
