--- a/src/components/customer/customer.css
+++ b/src/components/customer/customer.css
@@ -51,10 +51,8 @@
   margin-right: 10%;
 }
 
-.style-bottom{
+.style-bottom-customer{
   border-radius: 10px;
-  padding: 5px;
-  box-shadow: 2px 2px 5px 1px ;
 }
 
 
