--- a/src/components/turn/homework/homework.css
+++ b/src/components/turn/homework/homework.css
@@ -55,10 +55,8 @@
     
   }
 
-  .style-bottom{
+  .style-bottom-homework{
     border-radius: 10px;
-    padding: 5px;
-    box-shadow: 2px 2px 5px 1px ;
   }
 
 
