styles and customer fixed

--- a/src/components/turn/formTurn/formTurn.css
+++ b/src/components/turn/formTurn/formTurn.css
@@ -27,3 +27,8 @@
     font-size: 15px;
     padding: 5px;
 }
+
+.create-turn:active {
+    font-weight: bolder;
+    color: var(--white-color);
+  }
