--- a/src/components/modal/addTurn/popupAddTurn.css
+++ b/src/components/modal/addTurn/popupAddTurn.css
@@ -29,14 +29,19 @@
   margin-top: 9px;
 }
 
-.create-turn {
+.create-turn-popup {
   box-shadow: 2px 2px 5px 1px gray;
   background: var(--blue-color);
   border: none;
   color: var(--white-color);
   margin-top: 15px;
   font-size: 15px;
-  padding: 5px;
+  padding: 2px;
+}
+
+.create-turn-popup:active {
+  font-weight: bolder;
+  color: var(--white-color);
 }
 
 .cancel-turn {
@@ -47,8 +52,15 @@
   margin-top: 15px;
   margin-left: 8px;
   font-size: 15px;
-  padding: 5px;
+  padding: 2px;
 }
+
+.cancel-turn:active {
+  font-weight: bolder;
+  color: var(--white-color);
+}
+
+
 
 .form-select {
   width: 80% !important;
