--- a/src/components/modal/cardInformation/cardInformation.css
+++ b/src/components/modal/cardInformation/cardInformation.css
@@ -1,4 +1,12 @@
-.content {
+.content-information{
+  display: flex;
+}
+
+.card-info{
+  width: 50%;
+}
+
+.information {
   margin-top: 5px;
   display: flex;
 }
@@ -7,20 +15,36 @@
   width: 20px;
   height: 20px;
   background-color: var(--green-color);
+  border-radius: 20px;
 }
 
 .icon-cancel {
   width: 20px;
   height: 20px;
   background-color: var(--red-color);
+  border-radius: 20px;
 }
 
 .icon-avaliable {
+  background-color: var(--gray-color);
+  border-radius: 20px;
   width: 20px;
   height: 20px;
-  background-color: var(--gray-color);
 }
 
-.information {
+.info {
     width: 80%;
+}
+
+.earnings{
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  border-radius: 20px;
+  width: 170px;
+  height: 90px;
+  background-color: var(--blue-color);
+  color: var(--white-color);
+  font-weight: bolder;
+  opacity: 0.7;
 }
