--- a/src/components/statistics/statistics.css
+++ b/src/components/statistics/statistics.css
@@ -11,7 +11,7 @@
     margin-top: 10%;
     margin-left: 2%;
     margin-right: 2%;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 0 1% 1% 1%;
     box-shadow: 2px 2px 5px 1px gray;
 }
