--- a/src/components/turnSchedule/turnSchedule.css
+++ b/src/components/turnSchedule/turnSchedule.css
@@ -5,7 +5,7 @@
     margin-top: 10%;
     margin-left: 1%;
     margin-right: 1%;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 40vh;
 }
 
