--- a/src/components/modal/customerTImes/customerTimes.css
+++ b/src/components/modal/customerTImes/customerTimes.css
@@ -56,3 +56,9 @@
     gap: 20%;
     flex-direction: row;
   }
+
+  .container-text-result{
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+  }
