--- a/src/components/turnSchedule/turnSchedule.css
+++ b/src/components/turnSchedule/turnSchedule.css
@@ -14,3 +14,10 @@
     padding-left: 10%;
     padding-right: 10%;
 }
+
+.line-style{
+    width: 500px;
+    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+}
