--- a/src/components/turnSchedule/turnSchedule.css
+++ b/src/components/turnSchedule/turnSchedule.css
@@ -15,9 +15,11 @@
     padding-right: 10%;
 }
 
-.line-style{
-    width: 500px;
-    height: 200px;
-    margin-left: auto;
-    margin-right: auto;
+.btn-style-chart{
+    margin-top: 10px;
+    box-shadow: 2px 2px 5px 1px gray;
 }
+.text-style-chart{
+    font-size: small;
+}
+
